# pulsevideo

./: .gitignore  .travis.yml  Makefile  README.md  client.vala  main.vala  pulsevideo.vala
.github/workflows/: c-cpp.yml
dbus-xml/: com.stbtester.VideoSource1.xml  com.stbtester.VideoSource2.xml
gst/: fault.h  glib_compat.h  gstdbusvideosourcesrc.c  gstdbusvideosourcesrc.h  gstnetcontrolmessagemeta.c  gstpulsevideoplugin.c  gstpulsevideosink.c  gstpulsevideosink.h  gstpulsevideosrc.c  gstpulsevideosrc.h  gstrawvideovalidate.c  gstrawvideovalidate.h  gstsocketsrc.c  gstsocketsrc.h
gst/gst-plugins-base/gst-libs/gst/allocators/: gstfdmemory.c
gst/tcp/: gstmultihandlesink.c  gstmultisocketsink.c
gst/tesseract/: gsttesseract.cpp  gsttesseract.h  gsttextmeta.c  gsttextmeta.h
gst/tmpfile/: Makefile.am  gstfddepay.c  gstfddepay.h  gstfdpay.c  gstfdpay.h  gsttmpfile.c  gsttmpfileallocator.c  gsttmpfileallocator.h  run-fdpay-fddepay.py  wire-protocol.h
tests/: com.stbtester.VideoSource.test.service.in  integration_test.py  measure-performance.py  session.conf.in  socketintegrationtest.c
